fix css bugs on mobile

--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -53,6 +53,9 @@ footer {
 
 .sponsors .sponsor-logos {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
   gap: 15px;
 }
 
