--- a/src/app/pages/home-page/home-page.component.css
+++ b/src/app/pages/home-page/home-page.component.css
@@ -1,74 +1,78 @@
 .hero {
-    height: 100vh;
-    width: 100%;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    overflow: hidden;
+  height: 100vh;
+  width: 100%;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  overflow: hidden;
 }
 
 .hero::before {
-    content: "";
-    position: absolute;
-    top: -20px;
-	left: -20px;
-	right: 0;
-	bottom: 0;
-    background-image: url("/assets/hero_picture.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    filter: blur(10px);
-	opacity: 0.8;
-	clip-path: inset(0);
-    z-index: -1; /* Ensures it's behind the text content */
-	overflow: hidden;
+  content: '';
+  position: absolute;
+  top: -20px;
+  left: -20px;
+  right: 0;
+  bottom: 0;
+  background-image: url('/assets/hero_picture.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  filter: blur(10px);
+  opacity: 0.8;
+  clip-path: inset(0);
+  z-index: -1; /* Ensures it's behind the text content */
+  overflow: hidden;
 }
 
-.hero h1, .hero h2 {
-    z-index: 1; /* Keeps text in front */
-	filter: blur(0);
-	position: absolute;
+.hero h1,
+.hero h2 {
+  z-index: 1; /* Keeps text in front */
+  filter: blur(0);
 }
 
 .hero h1 {
-    font-size: 10vh; /* Increased size for better visibility */
-    font-family: "Impact", sans-serif;
-    margin: 0;
-	top: 35vh;
+  font-size: 10vh; /* Increased size for better visibility */
+  font-family: 'Anton', sans-serif;
+  font-weight: bolder;
+  margin: 0;
+  top: 35vh;
 }
 
 .hero h2 {
-    font-size: 3.5vh;
-    font-weight: bold;
-	top: 50vh;
+  font-size: 3.5vh;
+  font-weight: bold;
+  top: 50vh;
 }
 
 .scroll-button {
-    position: absolute; /* Position it relative to the .hero */
-    bottom: 20px; /* Center vertically */
-    align-content: center; /* Adjust to truly center */
-    background: none;
-    border: none;
-    cursor: pointer;
-    outline: none;
-    color: white;
-    font-size: 4vh; /* Adjust size as needed */
-    animation: bounce 1s infinite;
+  position: absolute; /* Position it relative to the .hero */
+  bottom: 20px; /* Center vertically */
+  align-content: center; /* Adjust to truly center */
+  background: none;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  color: white;
+  font-size: 4vh; /* Adjust size as needed */
+  animation: bounce 1s infinite;
 }
 
-
 @keyframes bounce {
-    0%, 20%, 50%, 80%, 100% {
-        transform: translateY(0);
-    }
-    40% {
-        transform: translateY(-10px);
-    }
-    60% {
-        transform: translateY(-5px);
-    }
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-10px);
+  }
+  60% {
+    transform: translateY(-5px);
+  }
 }
